update các chức năng